[tool.poetry]
name = "phosaiq-scratch"
version = "0.1.0"
description = ""
authors = ["mullzhang <mullzhang@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.26.1"
scikit-image = "^0.22.0"
dwave-ocean-sdk = "^6.7.0"
jupyter = "^1.0.0"
notebook = "^7.0.6"
tqdm = "^4.66.1"
opencv-python = "^4.8.1.78"
matplotlib = "^3.8.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
mypy = "^1.7.1"
black = "^23.11.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
